fixed product attributes gap in mini cart

--- a/src/Components/ProductAllAttributes/ProductAllAttributes.scss
+++ b/src/Components/ProductAllAttributes/ProductAllAttributes.scss
@@ -6,3 +6,7 @@
     flex-direction: column;
     gap: 24px;
 }
+
+.product-all-attributes.small {
+    gap: 8px;
+}
